--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,12 +1,17 @@
 {
-    "version": 2,
-    "buildCommand": "npm run build",
-    "outputDirectory": "build",
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ]
-  }
+  "version": 2,
+  "buildCommand": "npm run build",
+  "outputDirectory": "build",
+  "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
+}
+
   
